solving the refresh issue

--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -1,4 +1,15 @@
 body { 
     padding-top: 85px;
     overflow-x: hidden !important;
+    font-family: monospace !important;
 }
+
+.navbar {
+    font-size: 17px !important;
+}
+
+section {
+    font-size: 17px !important;
+}
+
+
